adding some css and others

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<% layout("/layouts/boilerplate")%>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>WanderLust</title>
-</head>
+</head> -->
 <body>
       <form method="POST" action="/listings">
           <input type="text" placeholder="Title" name="listing[title]">
@@ -28,4 +29,4 @@
           <button>Add</button>
       </form>
 </body>
-</html>
+<!-- </html> -->
