--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<% layout("/layouts/boilerplate")%>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>WanderLust</title>
-</head>
+</head> -->
 <body>
      <h3>Edit your list</h3>
      <form method="post" action="/listings/<%=listing._id%>?_method=PUT">
@@ -29,4 +30,4 @@
           <button>Add</button>
       </form>
 </body>
-</html>
+<!-- </html> -->
