--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<% layout("/layouts/boilerplate")%>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>WanderLust</title>
-</head>
+</head> -->
+
 <body>
      <h3>All Listings</h3>
      <form method="get" action="/listings/new">
@@ -16,4 +18,4 @@
           <%}%>
      </ul>
 </body>
-</html>
+<!-- </html> -->
