--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
-/* body{
-     background-color: pink;
-} */
+body{
+      
+     font-family: "Plus Jakarta Sans", sans-serif !important;
+}
+       /* font-optical-sizing: auto;
+       font-weight: 400;
+       font-style: normal; */
+     
+
 
 .navbar{
     height: 5rem;
@@ -12,4 +18,56 @@
 }
 .nav-link{
      color: #222222 !important;
+}
+.link{
+     width: 100%;
+}
+.link a {
+    
+     text-decoration: none !important;
+     color: #222222 !important;
+ }
+ .link a:hover{
+     text-decoration: underline !important;
+ }
+ 
+.f_info{
+     text-align: center;
+     display: flex;
+     height: 8rem;
+     background-color: #ebebeb;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+   align-items: center;
+
+}
+.f-info-socials {   
+     width: 100%;
+}
+.f-info-socials i{
+     font-size: 1.5rem;
+     margin-right: 1rem;
+}
+
+/* *******Cards********* */
+
+.card{
+     border: none  !important;
+     margin-bottom: 2rem !important;
+}
+.card-img-top{
+     border-radius: 1rem !important;
+     width: 100% !important;
+     object-fit: cover !important;
+}
+.card-body{
+     padding: 0% !important;
+}
+.card-text p{
+     font-weight: 400 !important;
+     
+}
+.card-text a{
+     text-decoration: none !important;
+   color: #222222 !important;
 }
