--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,10 +12,27 @@
      <form method="get" action="/listings/new">
           <button>Create New Listing</button>
      </form>
-     <ul>
+     <div class="row row-cols-lg-3  row-cols-md-2 row-cols-sm-1 " >
           <% for(let listing of allListings){%>
-          <li> <a href="/listings/<%=listing._id%>"><%=listing.title %></a></li>
-          <%}%>
-     </ul>
-</body>
+              
+
+              
+               <div class="card col" >
+                    <a href="/listings/<%= listing._id%>">
+                    <img src="<%=listing.image.url%>" class="card-img-top"  alt="listingimage" style="height: 20rem;"/>
+                   <div class="card-body">
+                      <p class="card-text">
+                   
+                         <b><%=listing.title %></b> <br><br>
+                    </a>
+                         &#8377;<%=listing.price.toLocaleString("en-IN")%> / night
+                         
+                      </p>
+                   
+                    </div>
+                  </div>
+                  <%}%>
+     </div>
+
+ 
 <!-- </html> -->
