--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,3 +71,15 @@ body{
      text-decoration: none !important;
    color: #222222 !important;
 }
+.listing-link{
+     text-decoration: none !important;
+}
+
+/* card effect */
+.card-img-overlay{
+     opacity: 0;
+}
+.card-img-overlay:hover{
+     opacity: 0.2;
+     background-color: white;
+}
