--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -13,14 +13,12 @@
           <button>Create New Listing</button>
      </form>
      <div class="row row-cols-lg-3  row-cols-md-2 row-cols-sm-1 " >
-          <% for(let listing of allListings){%>
-              
-
-              
+          <% for(let listing of allListings){%>         
                <div class="card col" >
-                    <a href="/listings/<%= listing._id%>">
+                    <a href="/listings/<%= listing._id%>" class="listing-link">
                     <img src="<%=listing.image.url%>" class="card-img-top"  alt="listingimage" style="height: 20rem;"/>
-                   <div class="card-body">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
                       <p class="card-text">
                    
                          <b><%=listing.title %></b> <br><br>
