--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,27 +7,48 @@
      <title>WanderLust</title>
 </head> -->
 <body>
+     <div class="row">
+          <div class="col-8 offset-2">
+               <br>
      <h3>Edit your list</h3>
+   
      <form method="post" action="/listings/<%=listing._id%>?_method=PUT">
-          <input type="text" value="<%=listing.title%>" name="listing[title]">
-          <br>
-          <br>
-          <input name="listing[description]" value="<%=listing.description%>" type="text">
-          <br>
-          <br>
-          <input type="text" value="<%=listing.image%>" name="listing[image]">
-          <br>
-          <br>
-          <input type="number" value="<%=listing.price%>" name="listing[price]">
-          <br>
-          <br>
-          <input type="text" value="<%=listing.country%>" name="listing[country]">
-          <br>
-          <br>
-          <input type="text" value="<%=listing.location%>" name="listing[location]">
-          <br>
-          <br>
-          <button>Add</button>
+          <div class="mb-3">
+               <label for="title" class="form-label">Title</label>
+               <input type="text" value="<%=listing.title%>" name="listing[title]" class="form-control">
+          </div>
+          
+          <div class="mb-3">
+               <label for="description" class="form-label">Description</label>
+               <input name="listing[description]" value="<%=listing.description%>" type="text" class="form-control">
+          </div>
+          
+          <div class="mb-3">
+               <label for="image" class="form-label">Image-Link</label>
+               <input type="text" value="<%=listing.image%>" name="listing[image]" class="form-control">
+          </div>
+          
+          <div class="row">
+          <div class="mb-3 col-md-4 ">
+               <label for="price" class="form-label">Price</label>
+               <input type="number" value="<%=listing.price%>" name="listing[price]" class="form-control">
+          </div>
+          
+          <div class="mb-3 col-md-8">
+               <label for="country" class="form-label">Country</label>
+               <input type="text" value="<%=listing.country%>" name="listing[country]" class="form-control">
+          </div>
+     </div>
+          
+          <div class="mb-3">
+               <label for="country" class="form-label">Country</label>
+               <input type="text" value="<%=listing.location%>" name="listing[location]" class="form-control">
+          </div>
+
+         <br>
+          <button class="add-button">Add</button>
+     </div>
+</div>
       </form>
 </body>
 <!-- </html> -->
