--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,27 +6,46 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>WanderLust</title>
 </head> -->
-<body>
+<div class="row">
+    <div class="col-8 offset-2">
+        <br><br>
+        <h3>Create a New Listing</h3>
       <form method="POST" action="/listings">
-          <input type="text" placeholder="Title" name="listing[title]">
+   
+           <div class="mb-3">
+            <label for="Title" class="form-label">Title</label>
+            <input type="text"  name="listing[title]" class="form-control">
+           </div>
+          
+         <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <input name="listing[description]" type="text"  class="form-control">
+         </div>
+          
+         <div class="mb-3">
+            <label for="image" class="form-label">Image-Link</label>
+            <input type="text"  name="listing[image]" class="form-control">
+         </div>
+          <div class="row">
+         <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input type="number"  name="listing[price]" class="form-control">
+         </div>
+          
+         <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input type="text"  name="listing[country]" class="form-control">
+         </div>
+        </div> 
+       <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input type="text"  name="listing[location]" class="form-control">
+       </div>
+          
           <br>
-          <br>
-          <input name="listing[description]" type="text">
-          <br>
-          <br>
-          <input type="text" placeholder="Image url/link" name="listing[image]">
-          <br>
-          <br>
-          <input type="number" placeholder="Price" name="listing[price]">
-          <br>
-          <br>
-          <input type="text" placeholder="country" name="listing[country]">
-          <br>
-          <br>
-          <input type="text" placeholder="Location" name="listing[location]">
-          <br>
-          <br>
-          <button>Add</button>
+          <button class="add-button">Add</button>
+          
       </form>
-</body>
+    </div>
+    </div>
 <!-- </html> -->
