--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,21 +7,43 @@
      <title>WanderLust</title>
 </head> -->
 <body>
+     <div class="row">
+          <div class="col-8 offset-2">
+   
      <h3>Listing Details</h3>
+
+     <div class="card">
+          <img src="<%= listing.image.url%>" class="card-img-top show-image" alt="listingimage">
+          <div class="card-body">
+            <p class="card-text">
+              <b> <%= listing.title%></b><br>
+              <%= listing.description%> <br>
+              &#8377; <%= listing.price.toLocaleString("en-IN")%>
+              <br>
+              <%= listing.location%>
+              <br>
+              <%= listing.country%>
+
+
+
+          
+          </p>
+          </div>
+     </div>
      <ul>
-          <li><%= listing.title%></li>
-          <li><%= listing.description%></li>
-          <li>  &#8377; <%= listing.price.toLocaleString("en-IN")%></li>
-          <li><%= listing.location%></li>
-          <li><%= listing.country%></li>
-          <br>
-  
-          <form method="get" action="/listings/<%=listing.id%>/edit">
-               <button>Edit</button>
+        <div class="col-1">
+          <form method="get" class="btn " action="/listings/<%=listing.id%>/edit">
+               <button class="button-col">Edit</button>
           </form>
-          <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-               <button>Delete</button>
+     </div>
+     <div class="col-1">
+          <form method="post" class="btn" action="/listings/<%=listing._id%>?_method=DELETE">
+               <button class="button-del">Delete</button>
           </form>
+     </div>
      </ul>
 </body>
+            
+          </div>
+     </div>
 <!-- </html> -->
