--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,7 +16,9 @@
           <img src="<%= listing.image.url%>" class="card-img-top show-image" alt="listingimage">
           <div class="card-body">
             <p class="card-text">
-             
+              <p class="card-text"> <i>Owned by
+             <%=listing.owner.username %></i>
+          </p>
               <%= listing.description%> <br>
               &#8377; <%= listing.price.toLocaleString("en-IN")%>
               <br>
