--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -19,12 +19,16 @@
               <p class="card-text"> <i>Owned by
              <%=listing.owner.username %></i>
           </p>
-              <%= listing.description%> <br>
-              &#8377; <%= listing.price.toLocaleString("en-IN")%>
-              <br>
-              <%= listing.location%>
-              <br>
-              <%= listing.country%>
+
+          <p> <%= listing.description%></p>
+              
+          <p> &#8377; <%= listing.price.toLocaleString("en-IN")%></p>
+             
+             
+              <p>   <%= listing.location%></p>
+           
+              <p>    <%= listing.country%></p>
+          
 
 
 
@@ -33,6 +37,9 @@
           </div>
      </div>
      <ul>
+          <% if(currUser && currUser ._id.equals(listing.owner._id)){
+%>
+          
         <div class="col-1">
           <form method="get" class="btn " action="/listings/<%=listing.id%>/edit">
                <button class="button-col">Edit</button>
@@ -43,12 +50,14 @@
                <button class="button-del">Delete</button>
           </form>
      </div>
+     <%}%>
      </ul>
 </body>
             
           </div  > 
           <div class="col-8 offset-3">
                <hr/>
+               <% if(currUser) {%>
                <h4>Leave a Review</h4>
                <form action="/listings/<%=listing.id%>/reviews" method="post" novalidate class="needs-validation">
                    <div class="mb-3 mt-3">
@@ -69,13 +78,14 @@
                    </div>
                    <button class="btn btn-outline-dark">Submit</button>
                </form>
-               <hr>
+               <%}%>
+            
                <p><b>All Reviews</b></p>
              <div class="row">
                     <% for(review of listing.reviews){%>
                          <div class="card col-5 ms-3 mb-3" >
                          <div class="card-body">
-                              <h5 class="card-title">Rishabh</h5>
+                              <h5 class="card-title">@<%=review.author.username%></h5>
                               <p class="card-text"><%=review.comment%></p>
                     <p class="card-text"><%=review.rating%>stars</p>
                     <form  class="mb-3" method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
