--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,7 +10,7 @@
     <div class="col-8 offset-2">
         <br><br>
         <h3>Create a New Listing</h3>
-      <form method="POST" action="/listings" novalidate class="needs-validation">
+      <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data" >
    
            <div class="mb-3">
             <label for="Title" class="form-label">Title</label>
@@ -27,6 +27,10 @@
          <div class="mb-3">
             <label for="image" class="form-label">Image-Link</label>
             <input type="text"  name="listing[image]" class="form-control">
+         </div>
+         <div class="mb-3">
+            <label for="image" class="form-label">Upload ListingImage</label>
+            <input type="file"  name="listing[image]" class="form-control">
          </div>
           <div class="row">
          <div class="mb-3 col-md-4">
