--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -58,12 +58,29 @@
           <div class="col-8 offset-3">
                <hr/>
                <% if(currUser) {%>
-               <h4>Leave a Review</h4>
+               <h4>Leave a Review</h4> 
                <form action="/listings/<%=listing.id%>/reviews" method="post" novalidate class="needs-validation">
-                   <div class="mb-3 mt-3">
+                    <div class="mb-3 mt-3">
                        <label for="rating" class="form-label">Rating</label>
                        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
                    </div>
+                   <div class="mb-3 mt-3">
+                  <fieldset class="starability-slot">
+                    <label for="rating" class="form-label">Rating</label>
+  <legend>First rating:</legend>
+  <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+  <input type="radio" id="first-rate1" name="rating" value="1" />
+  <label for="first-rate1" title="Terrible">1 star</label>
+  <input type="radio" id="first-rate2" name="rating" value="2" />
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input type="radio" id="first-rate3" name="rating" value="3" />
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input type="radio" id="first-rate4" name="rating" value="4" />
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input type="radio" id="first-rate5" name="rating" value="5" />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
+</div>
                    <div class="mb-3 mt-3">
                        <label for="comment" class="form-label">Comments</label  >
                        <textarea 
@@ -86,8 +103,11 @@
                          <div class="card col-5 ms-3 mb-3" >
                          <div class="card-body">
                               <h5 class="card-title">@<%=review.author.username%></h5>
+                              <p class="starability-result card-text" data-rating="<%= review.rating %>"> </p>
+
                               <p class="card-text"><%=review.comment%></p>
-                    <p class="card-text"><%=review.rating%>stars</p>
+               
+                   
                     <form  class="mb-3" method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
                          <button class="btn btn-sm btn-dark">Delete</button>
                     </form>
