--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -27,6 +27,7 @@
          <div class="mb-3">
             <label for="image" class="form-label">Upload ListingImage</label>
             <input type="file"  name="listing[image]" class="form-control">
+            required
          </div>
           <div class="row">
          <div class="mb-3 col-md-4">
