--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,11 +6,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" href="/">Home</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="/listings">All Listings</a>
+          <a class="nav-link" href="/listings">Explore</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/listings/new">Add New Listings</a>
@@ -22,16 +22,16 @@
          <% if(!currUser){
           %>
          
-        <a href="/login" class="btn btn-outline-primary me-2">Login</a>
+        <a href="/login" class="btn btn-outline-primary me-2"><b>Login</b></a>
         <!-- Logout Button (Replace with conditional rendering if needed) -->
        
 
     
-        <a href="/signup" class="btn btn-primary">Sign Up</a><%}%>
+        <a href="/signup" class="btn btn-primary"><b>Sign Up</b></a><%}%>
          <% if(currUser){
           %>
          
-        <a href="/logout" class="btn btn-outline-danger me-2">Logout</a><%}%>
+        <a href="/logout" class="btn btn-outline-danger me-2"><b>Logout</b></a><%}%>
       </div>
     </div>
   </div>
