--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -10,7 +10,7 @@
 <body>
    <br>
 
-     <h3>All Listings</h3>
+     <!-- <h3>All Listings</h3> -->
      <br>
      <!-- <form method="get" action="/listings/new">
           <button>Create New Listing</button>
