--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -56,7 +56,7 @@
             
           </div  > 
           <div class="col-8 offset-3">
-               <hr/>
+               
                <% if(currUser) {%>
                <h4>Leave a Review</h4> 
                <form action="/listings/<%=listing.id%>/reviews" method="post" novalidate class="needs-validation">
@@ -97,8 +97,9 @@
                </form>
                <%}%>
             
-               <p><b>All Reviews</b></p>
+          <% if(listing.reviews.length > 0) {%> 
              <div class="row">
+               <p><b>All Reviews</b></p>
                     <% for(review of listing.reviews){%>
                          <div class="card col-5 ms-3 mb-3" >
                          <div class="card-body">
@@ -115,7 +116,23 @@
           </div>
           <%}%>
      </div>
+     <%}%>
+     
+          </div>
+          <div class="col-6 offset-3 mb-3">
+          <h3>Where you'll be</h3>
+          <div id="map" ></div>
            </div>
+           
 
      </div>
+     <script>
+          let mapToken = "<%= process.env.MAP_TOKEN %>"
+	mapboxgl.accessToken = mapToken;
+    const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        center: [-74.5, 40], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 9 // starting zoom
+    });
+</script>
 <!-- </html> -->
