--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,10 +8,81 @@
 </head> -->
 
 <body>
-   <br>
+  
+   <style>
+     #filters{
+          display: flex;
+          flex-wrap: wrap;
+     }
+     .filter{
+          text-align: center;
+          margin-right: 2rem;
+          margin-top: 2rem;
+          opacity: 0.7;
+     }
+     .filter:hover{
+          opacity: 1;
+          cursor: pointer;
+     }
+     .tax-info{
+          display: none;
+     }
+     .tax-info{
+          display: none;
+     }
 
+  
+   </style>
+   
+     <div id="filters">
+          <div class="filter">
+               <div><i class="fa-solid fa-fire"></i></div>
+               <p>Trending</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-bed"></i></div>
+               <p>Rooms</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-mountain-sun"></i></div>
+               <p>Mountain</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-person-swimming"></i></div>
+               <p>Amazing</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-snowflake"></i></div>
+               <p>Snow Fall</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-cow"></i></div>
+               <p>Wild</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-dove"></i></div>
+               <p>Birds</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-school"></i></div>
+               <p>College</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-camera"></i></div>
+               <p>PhotoGraphy</p>
+          </div>
+          <div class="filter">
+               <div><i class="fa-solid fa-hotel"></i></div>
+               <p>Mansion</p>
+          </div>
+          <div class="form-check form form-switch">
+               <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+               <label class="form-check-label" for="flexSwitchCheckDefault">Display after adding total </label>
+             </div>        
+
+     </div>
      <!-- <h3>All Listings</h3> -->
-     <br>
+     
      <!-- <form method="get" action="/listings/new">
           <button>Create New Listing</button>
      </form> -->
@@ -27,7 +98,7 @@
                          <b><%=listing.title %></b> <br><br>
                     </a>
                     &#8377;<%= typeof listing.price === "number" ? listing.price.toLocaleString("en-IN") : "N/A" %> / night
-
+                    <i class="tax-info">&nbsp;&nbsp; +18% GST </i>
                          
                       </p>
                    
@@ -36,5 +107,19 @@
                   <%}%>
      </div>
 
+     <script>
+          let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+          taxSwitch.addEventListener("click",()=>{
+              let taxInfo = document.getElementsByClassName("tax-info");
+               for(info of taxInfo){
+                    if(info.style.display="inline"){
+                         info.style.display="inline"
+                    }
+                    else{
+                         info.style.display="none"
+                    }
+               }
+          });
+     </script>
  
 <!-- </html> -->
